2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpinterpreterdb.[ch]: added a function that
	returns all file extensions registered in the interpreter db.

	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_restore):
	if the PATHEXT environment variable is set, append all registered
	file extensions to it. This way GIMP can recognize Python scripts
	as plug-ins on platforms where the executable bit is unknown.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* data/tips/gimp-tips.xml.in: fixed a typo.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_nav_button_press): applied patch from
	Aurimas Juška that fixes positioning of the quick navigation
	popup (bug #430917).

2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fp.c (fp_render_preview): removed a conditional
	that has become obsolete now. Fixed indentation.

2007-04-17  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreviewarea.c: allow the draw, blend, mask
	and fill methods to be called with zero width or height. Nothing
	will be drawn, but it's still a valid call.

2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fp.c: deal better with drawables that are not
	the same size as the image. Fixes bug #430455.

2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fp.c: use g_malloc(); plugged memory leaks.

2007-04-17  Sven Neumann  <sven@gimp.org>

	Allow other applications to open images in GIMP as if they were
	new images (without associating a filename). Fixes bug #423118.

	* app/file/file-open.[ch]: added parameter 'as_new' to
	file_open_image() and its variants.

	* app/actions/data-commands.c
	* app/actions/documents-commands.c
	* app/actions/file-commands.c
	* app/core/gimpimagefile.c
	* app/dialogs/file-open-dialog.c
	* app/dialogs/file-open-location-dialog.c
	* app/widgets/gimptoolbox.c
	* app/widgets/gimptoolbox-dnd.c: changed accordingly.

	* app/app.[ch]