@@ -1,5 +1,10 @@
 2007-04-18  Sven Neumann  <sven@gimp.org>
 
+	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_restore):
+	try to improve readability by moving code to helper functions.
+
+2007-04-18  Sven Neumann  <sven@gimp.org>
+
 	* app/plug-in/gimpinterpreterdb.[ch]: added a function that
 	returns all file extensions registered in the interpreter db.
 
